bug with content overflow in todo-body fixed

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ select {
 .todo-description {
     font-size: 2rem;
     font-weight: 700;
+    overflow-wrap: anywhere;
 }
 
 .buttons-wrapper {
